force-app/main/default/objects/Kybella_S__c/Kybella_S__c.object-meta.xml
<CustomObject>
    <label>Kybella(S)</label>
    <nameField>
        <label>Kybella(S) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kybella(S)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>