force-app/main/default/objects/Kybella_S__c/fields/Expiration_Number__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Number__c</fullName>
    <label>Expiration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>