force-app/main/default/objects/Kybella_S__c/fields/Kybella__c.field-meta.xml
<CustomField>
    <fullName>Kybella__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kybella</label>
    <referenceTo>Kybella__c</referenceTo>
    <relationshipLabel>Kybella(S)</relationshipLabel>
    <relationshipName>Kybella_S</relationshipName>
    <type>Lookup</type>
</CustomField>