force-app/main/default/objects/Kybella_S__c/fields/Total_dosage__c.field-meta.xml
<CustomField>
    <fullName>Total_dosage__c</fullName>
    <label>Total dosage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>